Fix alignment

--- a/new-tab/style.css
+++ b/new-tab/style.css
@@ -19,7 +19,7 @@ body {
 
 .top-left {
   position: fixed;
-  top: 250px;
+  top: 200px;
   left: 50%;
   transform: translate(-50%, 0);
   margin: auto;
